Использование java 17 switch в keyboardService